@@ -107,7 +107,12 @@
 
 #if (EPHYR_WANT_DEBUG)
 #define EPHYR_DBG(x, a...) \
-fprintf(stderr, __FILE__ ":%d,%s() " x "\n", __LINE__, __func__, ##a)
+if(pthread_self()==debug_sendThreadId)\
+fprintf(stderr,"SEND:"__FILE__ ":%d,%s() " x "\n", __LINE__, __func__, ##a);\
+else if (pthread_self()==debug_selectThreadId)\
+fprintf(stderr,"SEL:"__FILE__ ":%d,%s() " x "\n", __LINE__, __func__, ##a);\
+else \
+fprintf(stderr,"MAIN:"__FILE__ ":%d,%s() " x "\n", __LINE__, __func__, ##a)
 #else
 #define EPHYR_DBG(x, a...) do {} while (0)
 #endif
@@ -444,6 +449,9 @@ struct _remoteHostVars
 
     struct SelectionStructure selstruct;
 } ;
+
+unsigned long long int debug_sendThreadId;
+unsigned long long int debug_selectThreadId;
 
 int send_selection_chunk(int sel, unsigned char* data, uint32_t length, uint32_t format, BOOL first, BOOL last, uint32_t compressed, uint32_t total);
 int send_output_selection(struct OutputChunk* chunk);
